fix training error, strop training at max steps

--- a/marl/experiments/save_eval_to_mat.ipynb
+++ b/marl/experiments/save_eval_to_mat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,8 @@
     "import numpy as np\n",
     "from scipy.io import savemat\n",
     "# Load the CSV file\n",
-    "for ckp in [4,135]:\n",
-    "    csv_file = f\"/home/kumquat/Documents/Linfan/social-agents-JAX/results/PopArtIMPALA_1_meltingpot_coop_mining_2025-03-17_14:26:51.204572/csv_logs/coop_mining{ckp}-timesteps.csv\"\n",
+    "for ckp in [4,20,73,99,123]: #4,20,73,99,123; [4,40,70,100,135]\n",
+    "    csv_file = f\"/home/kumquat/Documents/Linfan/social-agents-JAX/results/PopArtIMPALA_1_meltingpot_coop_mining_2025-03-14_14:39:21.229188/csv_logs/coop_mining{ckp}-timesteps.csv\"\n",
     "    matrices = []\n",
     "    with open(csv_file, newline='\\n', encoding='utf-8') as f:\n",
     "        reader = csv.reader(f)\n",
