add attention network

--- a/marl/experiments/save_eval_to_mat.ipynb
+++ b/marl/experiments/save_eval_to_mat.ipynb
@@ -9,7 +9,7 @@
     "import csv\n",
     "import ast\n",
     "import numpy as np\n",
-    "from scipy.io import savemat\n",
+    "from scipy.io import savemat, loadmat\n",
     "# Load the CSV file\n",
     "for ckp in [4,20,73,99,123]: #4,20,73,99,123; [4,40,70,100,135]\n",
     "    csv_file = f\"/home/kumquat/Documents/Linfan/social-agents-JAX/results/PopArtIMPALA_1_meltingpot_coop_mining_2025-03-14_14:39:21.229188/csv_logs/coop_mining{ckp}-timesteps.csv\"\n",
